[package]
name = "irrigation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rppal = "0.14.1"
ads1x1x = "0.2"
linux-embedded-hal="0.3"
embedded-hal="0.2.7"
nb="1.1"
serde_json="1.0"
tokio = { version = "1.0", features = ["full"] }
serde={version="1.0", features = ["derive"]}
round ="0.1"
